<resources>

    //общие строковые константы
    <string name="app_name">Gamc</string>
    <string name="action_settings">Настройки</string>
    <string name="save_btn">Сохранить</string>
    //Строковые константы на экране просмотра статуса
    <string name="status_screen_header">Статус</string>
    <string name="status_screen_temp">Температура</string>
    <string name="status_screen_humidity">Влажность</string>
    <string name="status_screen_lux">Освещённость</string>
    <string name="status_screen_water">Вода</string>
    <string name="status_screen_day">День</string>
    <string name="status_screen_date">Дата</string>
    <string name="status_screen_time">Время</string>
    <string name="status_screen_alarm_btn">Сообщения</string>
    //строковые константы на экране изменения настроек
    <string name="settings_screen_refresh">Частота обновления статуса:</string>
    //единицы измерения
    <string name="minutes">мин</string>
    <string name="lux">lux</string>
    <string name="grad">°</string>

</resources>
