<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_status_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="chocho_ololoev.gamc.Status_screen"
    tools:showIn="@layout/activity_status_screen">

    <TextView
        android:text="TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/status_label_header"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/status_label_header">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                style="@style/TextInRows"
                android:text="@string/status_screen_temp"
                android:id="@+id/status_label_temp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                style="@style/TextInRows"
                android:text="@string/status_screen_humidity"
                android:id="@+id/status_label_humidity" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                style="@style/TextInRows"
                android:text="@string/status_screen_lux"
                android:id="@+id/status_label_lux" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                style="@style/TextInRows"
                android:text="@string/status_screen_water"
                android:id="@+id/status_label_water" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                style="@style/TextInRows"
                android:text="@string/status_screen_day"
                android:id="@+id/status_label_day" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                style="@style/TextInRows"
                android:text="@string/status_screen_date"
                android:id="@+id/status_label_date" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                style="@style/TextInRows"
                android:text="@string/status_screen_time"
                android:id="@+id/status_label_time" />
        </TableRow>

    </TableLayout>

</RelativeLayout>
