<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="chocho_ololoev.gamc.settings">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:stretchColumns="*">

        <TableRow
            style="@style/TextInRows"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >



            <TextView
                android:text="@string/settings_screen_refresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView" />
            <EditText
                android:text="5"
                style="@style/ValsInRows"
                android:inputType="numberSigned"
                android:ems="2"
                android:id="@+id/editText"
                android:gravity="right"/>
            <TextView
                style="@style/ValsInRows"
                android:text="@string/minutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView1" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </TableLayout>

    <Button
        android:text="@string/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/settings_save_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
